Finalize CampusLink Career hardening and packaging